--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1> test </h1>
+<!DOCTYPE html>
+<html>
+  
+  <head>
+    <title> Ktu Sec </title>
+  </head>
+  
+  <body>
+    
+    <p> test </p>  
+    
+  </body>
+
+</html>
