--- a/_2017_pages/faqs.html
+++ b/_2017_pages/faqs.html
@@ -33,7 +33,7 @@ published: true
               <br> Ana sayfada belirtilen kayıt <a href=https://docs.google.com/forms/d/1AZEgOlYBDHsBISMKGWlLdWI5FoLU9qHpLIBj6r2Wv9w/viewform?edit_requested=true> link</a> inden başvurabilirsiniz. En kısa zamanda geri dönüş yapılacaktır.<br><br>
           </li>
           <li><b>Siber Güvenlik ve Linux eğitimleri ne zaman başlayacak?</b>
-              <br> Bu konu hakkında okulumuz ile iletişim halindeyiz uygun bir ortamın sağlanması durumunda Vizeler ile finaller arasında bu dönemlik eğitim sürecini gerçekleştireceğiz. Aynı zamanda 2. Dönem yeni bir eğitim planlaması yapacağız.
+              <br> Bu konu hakkında, uygun bir ortamın sağlanması durumunda Vizeler ile finaller arasında bu dönemlik eğitim sürecini gerçekleştireceğiz. Aynı zamanda 2. Dönem yeni bir eğitim planlaması yapacağız.
               Eğitimler hakkındaki duyuruları takip etmek için
               <a target="_blank" href="http://facebook.com/ktu.sec"> Facebook </a>
               <a target="_blank" href="http://twitter.com.com/ktusec"> Twitter </a>
