--- a/_2017_pages/about.html
+++ b/_2017_pages/about.html
@@ -13,7 +13,7 @@ title: KtuSec Hakkında
 
       <p>
 
-Ktu Security Club diğer tüm üniversitelerde olduğu gibi Karadeniz Teknik Üniversitesi'nde bilgi güvenliği farkındalığını artırmak amacıyla <a target="_blank" href="http://octosec.net"> Octosec </a>, <a target="_blank" href="http://canyoupwn.me"> CanYouPwn.Me </a> gibi toplulukların desteği ile kurulmuş ticari amaç gütmeyen tamamen bireyleri eğitip geliştirme amacı/düşüncesi içerisinde olan bir kulüptür.
+Ktu Security Club diğer tüm üniversitelerde olduğu gibi Karadeniz Teknik Üniversitesi'nde bilgi güvenliği farkındalığını artırmak amacıyla <a target="_blank" href="http://octosec.net"> Octosec </a>, <a target="_blank" href="http://canyoupwn.me"> CanYouPwn.Me </a> gibi toplulukların desteği ile kurulmuş ticari amaç gütmeyen tamamen bireyleri eğitip geliştirme amacı/düşüncesi içerisinde olan bir topluluktur.
 <br><br>
 
 Kulüp olarak üniversitemizde kendini güvenlik alanında yetiştirmek isteyipte bu imkanların sağlanabileceği düzgün bir kaynak bulamayanları bir arada toplayıp türlü test ve laboratuvar
