--- a/_2017_pages/announcements/egitim.html
+++ b/_2017_pages/announcements/egitim.html
@@ -34,7 +34,9 @@ title: Siber Güvenlik Eğitimi
           Siber Güvenlik Eğitimleri için Katılımcıların Bilgisayarına Vmware Sanal makinelerine Kali Linux kurmaları gerekmektedir.<br>
           <a target="_blank" href="https://www.kali.org/downloads/"> Kali Linux indirme linki</a><br>
           <a target="_blank" href="http://www.mshowto.org/adim-adim-kali-linux-kurulumu.html"> Kali Linux Kurulumu</a><br><br>
-          Kurulum esnasında karşılaşılan sorunlar için bizimle iletişime geçebilirsiniz.
+          Kurulum esnasında karşılaşılan sorunlar için bizimle iletişime geçebilirsiniz.<br><br>
+         
+            Eğitimlerin düzenleneceği yer ayarlandığında duyurulacaktır.
 
 
 
