Siber Güvenlik Eğitimi

--- a/_2017_pages/announcements/egitim.html
+++ b/_2017_pages/announcements/egitim.html
@@ -13,14 +13,16 @@ title: Siber Güvenlik Eğitimi
  <h1>SİBER GÜVENLİK EĞİTİMİ</h1>
 
      <p>
-          Topluluğumuz tarafından düzenlenecek olan Linux ve Siber Güvenlik eğitimlerine Karadeniz Teknik Üniversitesinden herkes başvurabilir.
-          1. Etap Linux Eğitimi 24 Kasımda başlayıp konuların yoğunluğuna göre 29 Aralığa kadar devam edecek. Eğitimler haftasonu belirlediğimiz
-          bir günde asasdasdasdad yerinde gerçekleştirilecek<br>
-          2. Etap Siber Güvenlik Eğitimleri 2. Dönem de verilmek üzere planlaması yapılacak.
-          Başvuru formunu gerekli özeni gösterecek şekilde dolduranlar eğitime seçilecek, eğitim kontenjanlarla sınırlıdır.<br>
-          Linux hakkında anlatacağımız konularda önceden bilgisi olanlar Linux eğitimine dahil olmadan Siber Güvenlik Eğitimlerine geçmek istediklerini
+          Topluluğumuz tarafından düzenlenecek olan Linux ve Siber Güvenlik eğitimleri 25 Kasımda başlayacaktır.
+          Eğitimdeki temel amacımız Siber Güvenliğe ilgisi olan kişileri bu alanda geliştirip fikir sahibi olmalarını sağlamaktır.
+          Eğitimlere Karadeniz Teknik Üniversitesinden herkes başvurabilir.
+          1. Etap Linux Eğitimi 25 Kasımda başlayıp konuların yoğunluğuna göre 29 Aralığa kadar devam edecek. Eğitimler haftasonu belirlediğimiz
+          bir günde gerçekleştirilecek. Eğitimlerin düzenleneceği yeri zaman içerisinde katılımcılara duyuracağız.<br>
+          2. Etap Siber Güvenlik Eğitimleri 2. Dönemde verilmek üzere planlaması yapılacaktır.
+          Eğitimimiz kontenjanlarla sınırlı olduğundan dolayı başvuru formunu gerekli özeni gösterecek şekilde dolduranlar eğitime seçilecek. <br>
+          Linux eğitiminde anlatacağımız konularda önceden bilgisi olanlar Linux eğitimine dahil olmadan Siber Güvenlik Eğitimlerine geçmek istediklerini
           başvuru formunda belirtmesi gereklidir Duruma göre kontenjan açılacaktır.<br>
-          Tüm eğitimlerin sonunda herkese açık bir CTF (Capture The Flag) yarışması düzenlenecek. Dereceye giren kişilere çeşitli ödüllemeler yapılacaktır.
+          Tüm eğitimlerin sonunda yarışmalar düzenlenip. Dereceye giren kişilere çeşitli ödüllemeler yapılacaktır.
           CTF yarışmasına Karadeniz Teknik Üniversitesindeki herkes başvurabilir.<br>
           Eğitimlere aşağıdaki adresten kayıt olabilirsiniz.<br>
           <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2"> KAYIT </a>
@@ -30,15 +32,13 @@ title: Siber Güvenlik Eğitimi
           <a target="_blank" href="https://www.ubuntu.com/download/desktop"> Ubuntu indirme linki </a><br>
           <a target="_blank" href="https://www.youtube.com/watch?v=VEst_QFo64E&t=10s"> Ubuntu Kurulumu </a><br>
           <a target="_blank" href="https://my.vmware.com/web/vmware/free#desktop_end_user_computing/vmware_workstation_player/14_0"> Vmware İndirme Linki</a><br>
-          <a target="_blank" href="http://sausiber.org/download.virtualbox.org/virtualbox/5.1.28/VirtualBox-5.1.28-117968-Win.exe"> Virtualbox İndirme Linki</a><br><br>
+          <a target="_blank" href="http://download.virtualbox.org/virtualbox/5.1.28/VirtualBox-5.1.28-117968-Win.exe"> Virtualbox İndirme Linki</a><br><br>
           Siber Güvenlik Eğitimleri için Katılımcıların Bilgisayarına Vmware Sanal makinelerine Kali Linux kurmaları gerekmektedir.<br>
           <a target="_blank" href="https://www.kali.org/downloads/"> Kali Linux indirme linki</a><br>
           <a target="_blank" href="http://www.mshowto.org/adim-adim-kali-linux-kurulumu.html"> Kali Linux Kurulumu</a><br><br>
           Kurulum esnasında karşılaşılan sorunlar için bizimle iletişime geçebilirsiniz.<br><br>
-         
+
             Eğitimlerin düzenleneceği yer ayarlandığında duyurulacaktır.
-
-
 
      </p>
 <center> <img src="/css/2017_style/img/new/siber.png"></img> </center>
