Siber Güvenlik Eğitimi

--- a/_2017_pages/announcements/egitim.html
+++ b/_2017_pages/announcements/egitim.html
@@ -13,17 +13,18 @@ title: Siber Güvenlik Eğitimi
  <h1>SİBER GÜVENLİK EĞİTİMİ</h1>
 
      <p>
-          Topluluğumuz tarafından düzenlenecek olan Linux ve Siber Güvenlik eğitimleri 25 Kasımda başlayacaktır.
+          Topluluğumuz tarafından düzenlenecek olan Linux ve Siber Güvenlik eğitimleri süreci 25 Kasımda başlayacaktır.
           Eğitimdeki temel amacımız Siber Güvenliğe ilgisi olan kişileri bu alanda geliştirip fikir sahibi olmalarını sağlamaktır.
-          Eğitimlere Karadeniz Teknik Üniversitesinden herkes başvurabilir.
-          1. Etap Linux Eğitimi 25 Kasımda başlayıp konuların yoğunluğuna göre 29 Aralığa kadar devam edecek. Eğitimler haftasonu belirlediğimiz
-          bir günde gerçekleştirilecek. Eğitimlerin düzenleneceği yeri zaman içerisinde katılımcılara duyuracağız.<br>
-          2. Etap Siber Güvenlik Eğitimleri 2. Dönemde verilmek üzere planlaması yapılacaktır.
-          Eğitimimiz kontenjanlarla sınırlı olduğundan dolayı başvuru formunu gerekli özeni gösterecek şekilde dolduranlar eğitime seçilecek. <br>
-          Linux eğitiminde anlatacağımız konularda önceden bilgisi olanlar Linux eğitimine dahil olmadan Siber Güvenlik Eğitimlerine geçmek istediklerini
-          başvuru formunda belirtmesi gereklidir Duruma göre kontenjan açılacaktır.<br>
-          Tüm eğitimlerin sonunda yarışmalar düzenlenip. Dereceye giren kişilere çeşitli ödüllemeler yapılacaktır.
-          CTF yarışmasına Karadeniz Teknik Üniversitesindeki herkes başvurabilir.<br>
+
+          1. Etap - Linux Eğitimi 25 Kasımda başlayıp konuların yoğunluğuna göre 29 Aralık'a kadar devam edecek. Eğitimler haftasonu belirlediğimiz
+          bir günde gerçekleştirilecektir.<br>
+          2. Etap Siber Güvenlik Eğitimleri 2. Dönemde verilmek üzere planlaması yapılacak.
+          Eğitimimiz kontenjanlarla sınırlıdır. <br>
+          Linux eğitiminde anlatacağımız konularda bilgisi olan kişiler Linux eğitimine dahil olmadan Siber Güvenlik Eğitimlerine geçmek istediklerini
+          başvuru formunda belirtmesi gereklidir.<br>
+          Eğitim süreci boyunca ve sonunda CTF tarzı yarışmalar düzenlenip. Dereceye giren kişilere çeşitli ödüllemeler yapılacaktır.
+          Eğitimlere ve CTF yarışmasına Karadeniz Teknik Üniversitesinden herkes başvurabilir.<br>
+          Ayrıca Gerekli görüldüğü takdirde 24 Kasım tarihinde Linux kurma ve Git Workshopu yapılacaktır.
           Eğitimlere aşağıdaki adresten kayıt olabilirsiniz.<br>
           <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2"> KAYIT </a>
           <br><br>
@@ -38,7 +39,7 @@ title: Siber Güvenlik Eğitimi
           <a target="_blank" href="http://www.mshowto.org/adim-adim-kali-linux-kurulumu.html"> Kali Linux Kurulumu</a><br><br>
           Kurulum esnasında karşılaşılan sorunlar için bizimle iletişime geçebilirsiniz.<br><br>
 
-            Eğitimlerin düzenleneceği yer ayarlandığında duyurulacaktır.
+          Eğitimlerin düzenleneceği yer ayarlandığında duyurulacaktır.
 
      </p>
 <center> <img src="/css/2017_style/img/new/siber.png"></img> </center>
