--- a/_2017_pages/announcements/egitim.html
+++ b/_2017_pages/announcements/egitim.html
@@ -19,14 +19,15 @@ title: Siber Güvenlik Eğitimi
           1. Etap - Linux Eğitimi 25 Kasımda başlayıp konuların yoğunluğuna göre 29 Aralık'a kadar devam edecek. Eğitimler haftasonu belirlediğimiz
           bir günde gerçekleştirilecektir.<br>
           2. Etap Siber Güvenlik Eğitimleri 2. Dönemde verilmek üzere planlaması yapılacak.
-          Eğitimimiz kontenjanlarla sınırlıdır. <br>
+          Eğitimimiz ücretsiz ve kontenjanlarla sınırlıdır. <br>
           Linux eğitiminde anlatacağımız konularda bilgisi olan kişiler Linux eğitimine dahil olmadan Siber Güvenlik Eğitimlerine geçmek istediklerini
           başvuru formunda belirtmesi gereklidir.<br>
           Eğitim süreci boyunca ve sonunda CTF tarzı yarışmalar düzenlenip. Dereceye giren kişilere çeşitli ödüllemeler yapılacaktır.
           Eğitimlere ve CTF yarışmasına Karadeniz Teknik Üniversitesinden herkes başvurabilir.<br>
           Ayrıca Gerekli görüldüğü takdirde 24 Kasım tarihinde Linux kurma ve Git Workshopu yapılacaktır.
           Eğitimlere aşağıdaki adresten kayıt olabilirsiniz.<br>
-          <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2"> KAYIT </a>
+          <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2"> KAYIT </a><br>
+          Son başvuru tarihi: 21 Kasım 2017
           <br><br>
           Linux Eğitimlerine katılacak olan arkadaşların bilgisayarına sanal veya normal olarak Ubuntu (Debian tabanlı bir işletim sistemi) kurararak gelmeleri gereklidir.
           Gerekli Ayrıntılar için:<br>
