--- a/_2017_pages/announcements/egitim.html
+++ b/_2017_pages/announcements/egitim.html
@@ -26,7 +26,8 @@ title: Siber Güvenlik Eğitimi
           Eğitimlere ve CTF yarışmasına Karadeniz Teknik Üniversitesinden herkes başvurabilir.<br>
           Ayrıca Gerekli görüldüğü takdirde 24 Kasım tarihinde Linux kurma ve Git Workshopu yapılacaktır.
           Eğitimlere aşağıdaki adresten kayıt olabilirsiniz.<br>
-          <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2"> KAYIT </a><br>
+          <!-- <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2"> KAYIT </a><br> -->
+          <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2" class="page-scroll btn btn-sm">KAYIT</a><br>
           Son başvuru tarihi: 21 Kasım 2017
           <br><br>
           Linux Eğitimlerine katılacak olan arkadaşların bilgisayarına sanal veya normal olarak Ubuntu (Debian tabanlı bir işletim sistemi) kurararak gelmeleri gereklidir.
