egitim.html update

--- a/_2017_pages/announcements/egitim.html
+++ b/_2017_pages/announcements/egitim.html
@@ -44,5 +44,7 @@ title: Siber Güvenlik Eğitimi
           Eğitimlerin düzenleneceği yer ayarlandığında duyurulacaktır.
 
      </p>
-<center> <img src="/css/2017_style/img/new/siber.png"></img> </center>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
+          <img src="/css/2017_style/img/new/siber.png"></img>
+     </meta>
 </section>
