--- a/_2017_pages/announcements/egitim.html
+++ b/_2017_pages/announcements/egitim.html
@@ -45,6 +45,6 @@ title: Siber Güvenlik Eğitimi
 
      </p>
      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
-          <img src="/css/2017_style/img/new/siber.png"></img>
+          <img src="/css/2017_style/img/new/siber.png" alt="Cyber Security">
      </meta>
 </section>
