--- a/_2017_pages/announcements/egitim.html
+++ b/_2017_pages/announcements/egitim.html
@@ -28,7 +28,7 @@ title: Siber Güvenlik Eğitimi
           Eğitimlere aşağıdaki adresten kayıt olabilirsiniz.<br>
           <!-- <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2"> KAYIT </a><br> -->
           <a target="_blank" href="https://goo.gl/forms/fmSnZzuf1kq9TWRZ2" class="page-scroll btn btn-sm">KAYIT</a><br>
-          Son başvuru tarihi: 21 Kasım 2017
+          Son başvuru tarihi: 21 Kasım 2017 - 00:00
           <br><br>
           Linux Eğitimlerine katılacak olan arkadaşların bilgisayarına sanal veya normal olarak Ubuntu (Debian tabanlı bir işletim sistemi) kurararak gelmeleri gereklidir.
           Gerekli Ayrıntılar için:<br>
@@ -41,7 +41,8 @@ title: Siber Güvenlik Eğitimi
           <a target="_blank" href="http://www.mshowto.org/adim-adim-kali-linux-kurulumu.html"> Kali Linux Kurulumu</a><br><br>
           Kurulum esnasında karşılaşılan sorunlar için bizimle iletişime geçebilirsiniz.<br><br>
 
-          Eğitimlerin düzenleneceği yer ayarlandığında duyurulacaktır.
+          Eğitimlerin düzenleneceği yer ayarlandığında duyurulacaktır.<br>
+            9,10 - 16 aralık tarihlerinde okulumuzda etkinlikler düzenleneceğinden bu günlerde ders yapılmayacaktır.
 
      </p>
      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
