about page changed

--- a/_2017_pages/about.html
+++ b/_2017_pages/about.html
@@ -22,5 +22,5 @@ Kulüp olarak üniversitemizde kendini güvenlik alanında yetiştirmek isteyipt
 <br><br>
 Siber Güvenlik farkındalığı oluşturmak için seminerler, eğitim, konferans, yarışmalar düzenlenecektir. Linux Sistem Yönetimi, Web Uygulama Güvenliği, Ağ Güvenliği, Sanal ortamlarda Uygulamalı sızma testleri, Güvenli kod geliştirme vb. gibi eğitimlerle katılımcıların bilgi düzeyini artırmayı hedefliyoruz.</p>
 
-<br> Kulübümüz, Karadeniz Teknik Üniversitesi Kulüpler Birliği bildirgesine göre yeni seçimlere kadar <b> topluluk </b> olarak gelişim göstermektedir.
-    </section>
+<br>
+<!-- artık resmi bir kulübüz ^_^  -->  </section>
