job: agenda page will be change

--- a/_2017_pages/agenda.html
+++ b/_2017_pages/agenda.html
@@ -11,14 +11,8 @@ published: true
 
     <div class="event black-frame">
       <h1>ETKİNLİK TAKVİMİ</h1><br>
-      <center> Siber Güvenlik Eğitimi 1. Etap = Linux101 </center>
-      <center> 24 Kasım - 29 Aralık 2017 </center><br>
-      <center> Siber Güvenlik Eğitimi 2. Etap = Enine Boyuna Siber Güvenlik</center>
-      <center> 2. Dönem </center><br>
-      <center> Sürpriz Etkinlik - 1 </center>
-      <center> ... </center>
-      <center> ... </center>
-      <center> ... </center><br><br>
+      <center> Düzenleniyor... </center>
+
       <center> Eğitim ve Etkinlik Duyuruları sosyal medya hesaplarımız üzerinden yapılacaktır..</center>
 
 
