agenda page updated

--- a/_2017_pages/agenda.html
+++ b/_2017_pages/agenda.html
@@ -8,13 +8,38 @@ published: true
     <script type="text/javascript">
         document.write ('<body style="background: Gainsboro; background-attachment: fixed;">')
     </script>
-
-    <div class="event black-frame">
-      <h1>ETKİNLİK TAKVİMİ</h1><br>
-      <center> Düzenleniyor... </center>
-
-      <center> Eğitim ve Etkinlik Duyuruları sosyal medya hesaplarımız üzerinden yapılacaktır..</center>
-
-
+    <section id="conference" class="black-frame about about-container about-container-top">
+         <h1>ETKİNLİK TAKVİMİ</h1>
+         <center> Eğitim ve Etkinlik Duyuruları sosyal medya hesaplarımız üzerinden yapılacaktır..</center>
+         <div class="event black-frame">
+              <h2> Yapılacak Olanlar </h2>
+              <center>
+                   <p> Ktusec CTF </p>
+                   <p> KtuSeconf </p>
+              </center>
+         </div>
+          <div class="event black-frame">
+               <h3> Yapıldı </h3>
+               <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
+                    <img src="/css/2017_style/img/new/opening.jpeg" alt="Opening">
+               </meta><hr>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
+                    <a href="http://ktusec.com/egitim" target="_blank">
+                        <img src="/css/2017_style/img/new/siber.png" alt="Cyber Security">
+                  </a>
+                </meta><hr>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
+                         <img src="/css/2017_style/img/new/bilgi-toplama.jpg" alt="ws-1 information">
+               </meta><hr>
+               <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
+                    <img src="/css/2017_style/img/new/linux.jpg" alt="ws-2 Linux">
+              </meta><hr>
+               <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
+                    <img src="/css/2017_style/img/new/kahvalti.jpg" alt="Breakfast">
+               </meta><hr>
+               <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
+                    <img src="/css/2017_style/img/new/closing.jpeg" alt="Cyber Security">
+               </meta>
+      </section>
 
     </div>
