wiki page updated

--- a/_2017_pages/wiki/wiki.html
+++ b/_2017_pages/wiki/wiki.html
@@ -12,14 +12,14 @@ title: KtuSec Dökümantasyon
                <h1> KtuSec Dökümantasyon </h1>
                <p> KtuSec ekibi olarak hazırladığımız makale, döküman ve yazılar... </p>
                <div class="mitm">
-                    <a href="https://drive.google.com/file/d/1wOwS3bIfaQxnQmfSaf6dCoi0G1gGrrrS/view" target="_blank">
-                         <img src="https://www.incapsula.com/images/illustrations/web-app-security-mini-site/man-in-the-middle-mitm.jpg" width="360" height="250" alt="Mitm">
+                    <a href="/mitm" target="_blank">
+                         <img src="/_2017_pages/wiki/mitm/b.png" width="350" height="250" margin="auto" alt="Mitm">
                          <h3> Man in The Middle Attack </h3> </img>
                     </a>
                          <p> Man in the middle attack, bilgisayar ile ağ arasına saldırganın girmesi ile
                               verilerin alınması, değiştirilmesi vs. gibi yöntemlerin yapıldığı saldırı çeşididir. Bu yazıda mitm mantığı ve korunma
                               yöntemlerinden değineceğim.</p>
-                              <a href="https://drive.google.com/file/d/1wOwS3bIfaQxnQmfSaf6dCoi0G1gGrrrS/view" target="_blank"> Devamını oku...</a>
+                              <a href="/mitm" target="_blank"> Devamını oku...</a>
                          <p> by <a href="/#Name-11" target="_blank"> Emir Çetin </a> </p>
                          <p> 21.03.18 </p>
 
@@ -40,8 +40,10 @@ title: KtuSec Dökümantasyon
           }
           .mitm {
                border: 3px solid black;
-               padding: 25px;
-               margin: 25px;
+               border-radius: 4px;
+               padding: 5px;
+               width: auto;
+               overflow: hidden;
           }
           img {
                float: left;
