--- a/_2017_pages/agenda.html
+++ b/_2017_pages/agenda.html
@@ -10,16 +10,11 @@ published: true
     </script>
     <section id="conference" class="black-frame about about-container about-container-top">
          <h1>ETKİNLİK TAKVİMİ</h1>
-         <center> Eğitim ve Etkinlik Duyuruları sosyal medya hesaplarımız üzerinden yapılacaktır..</center>
-         <div class="event black-frame">
-              <h2> Yapılacak Olanlar </h2>
-              <center>
-                   <p> Ktusec CTF </p>
-                   <p> KtuSeconf </p>
-              </center>
-         </div>
+         <center> Eğitim ve Etkinlik Duyuruları sosyal medya hesaplarımız üzerinden yapılacaktır.. <br><br>
+             <a href="https://twitter.com/twitter" target="_blank" style="margin-right:20px;"> Twitter </a>
+             <a href="https://instagram.com/ktusec" target="_blank"> Instagram</a>
+         </center>
           <div class="event black-frame">
-               <h3> Yapıldı </h3>
                <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
                     <img src="/css/2017_style/img/new/opening.jpeg" alt="Opening">
                </meta><hr>
