--- a/_2017_pages/about.html
+++ b/_2017_pages/about.html
@@ -9,18 +9,27 @@ title: KtuSec Hakkında
     </script>
 
     <section id="conference" class="black-frame about about-container about-container-top">
-      <h1>{{ page.title }}</h1>
+        <h1>{{ page.title }}</h1>
+            <center><img src="css/2017_style/img/logo.png"></center> 
+            <p>
+                    KTÜ Siber Güvenlik Kulübü, Karadeniz Teknik Üniversitesi'nde bilgi güvenliği ve
+                    siber güvenlik farkındalığını oluşturmak, bu alanda kendini geliştirmek isteyenlere
+                    gerekli bilgiyi sağlamak ve üniversitemizi Türkiye’deki diğer üniversitelerde olduğu
+                    gibi kendi siber güvenlik kulübü ile temsil etme amacıyla kurulmuş ticari amaç
+                    gütmeyen, bireyleri eğitip geliştirme amacı/düşüncesi içerisinde olan bir kulüptür.<br><br>
+                    Dünya üzerinde bilgi güvenliğinin önemi gittikçe artmakla beraber bu süreç
+                    ülkemizde henüz yeni gelişim göstermektedir. Bunun birkaç nedeni arasından biri
+                    de üniversitelerde veya toplum arasında siber güvenliğin karşılığının tam
+                    anlamıyla bulamamasından kaynaklanmaktadır.<br><br>
+                    Kulüp olarak üniversitemizde, kendini siber güvenlik ve bilgisayar teknolojileri
+                    alanında yetiştirmek isteyip de bu imkanların sağlanabileceği kaynak
+                    bulamayanlara gerekli bilgiyi sağlamak amacıyla bir arada toplayıp türlü test ve
+                    laboratuvar çalışmalarıyla onların gelişimini sağlayıp Karadeniz Teknik
+                    Üniversitesi olarak bir ekip kurmaktır. Bu amaç doğrultusunda 2017 yılından
+                    itibaren okulumuzda çeşitli eğitim, seminer, konferans ve yarışmalar
+                    düzenlemekteyiz.<br><br>
+                    Siber Güvenlik farkındalığı oluşturmak için kurulmuş olan kulübümüzün
+                    oluşturduğu eğitimler ile katılımcıların bilgi düzeyini artırmayı hedefliyoruz.
 
-      <p>
-
-Ktu Security Club diğer tüm üniversitelerde olduğu gibi Karadeniz Teknik Üniversitesi'nde bilgi güvenliği farkındalığını artırmak amacıyla <a target="_blank" href="http://octosec.net"> Octosec </a>, <a target="_blank" href="http://canyoupwn.me"> CanYouPwn.Me </a> gibi toplulukların desteği ile kurulmuş ticari amaç gütmeyen tamamen bireyleri eğitip geliştirme amacı/düşüncesi içerisinde olan bir topluluktur.
-<br><br>
-
-Kulüp olarak üniversitemizde kendini güvenlik alanında yetiştirmek isteyipte bu imkanların sağlanabileceği düzgün bir kaynak bulamayanları bir arada toplayıp türlü test ve laboratuvar
-çalışmalarıyla onların gelişimini sağlayıp Karadeniz Teknik Üniversitesi olarak bir ekip kurmaktır.
-<br><br>Dünya üzerinde bilgi güvenliğinin önemi gittikçe artmaktadır fakat bu durum ülkemizde henüz yeni yeni geliştmektedir. Bunun bir kaç nedeni arasından biri de üniversitelerde veya toplum arasında siber güvenliğin karşılığının tam anlamıyla bulamamasından kaynaklanmaktadır.
-<br><br>
-Siber Güvenlik farkındalığı oluşturmak için seminerler, eğitim, konferans, yarışmalar düzenlenecektir. Linux Sistem Yönetimi, Web Uygulama Güvenliği, Ağ Güvenliği, Sanal ortamlarda Uygulamalı sızma testleri, Güvenli kod geliştirme vb. gibi eğitimlerle katılımcıların bilgi düzeyini artırmayı hedefliyoruz.</p>
-
-<br>
-<!-- artık resmi bir kulübüz ^_^  -->  </section>
+            </p><br>
+    </section>
