--- a/_2017_pages/agenda.html
+++ b/_2017_pages/agenda.html
@@ -11,7 +11,7 @@ published: true
     <section id="conference" class="black-frame about about-container about-container-top">
          <h1>ETKİNLİK TAKVİMİ</h1>
          <center> Eğitim ve Etkinlik Duyuruları sosyal medya hesaplarımız üzerinden yapılacaktır.. <br><br>
-             <a href="https://twitter.com/twitter" target="_blank" style="margin-right:20px;"> Twitter </a>
+             <a href="https://twitter.com/ktusec" target="_blank" style="margin-right:20px;"> Twitter </a>
              <a href="https://instagram.com/ktusec" target="_blank"> Instagram</a>
          </center>
           <div class="event black-frame">
